# qtacceleratorUI

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtacceleratorUI.pro  qtreferenceapp_1.0.bb  resorces.qrc  resources.qrc
helpers/: serviceconnector.cpp  serviceconnector.h
